--- a/templates/thanks_page.html
+++ b/templates/thanks_page.html
@@ -5,6 +5,7 @@
     <title>Thanks!</title>
 </head>
 <body>
-<h1>Спасибо за отправку!</h1>
+<h1>{{ name }} Спасибо за отправку! {{ phone }}</h1>
+{{ req }}
 </body>
 </html>
