--- a/UdemyDjango/static/external.css
+++ b/UdemyDjango/static/external.css
@@ -30,7 +30,7 @@
   transition: 0.5s ease-in-out;
 }
 
-.slaider_h {
+.slider_h {
 	height: 60px;
 	width: 50%;
 	margin: 30px 0px 10px 0px;
@@ -39,7 +39,7 @@
 	text-align: center;
 }
 
-.slaider_p {
+.slider_p {
 	height: 100%;
 	width: 80%;
 	float: right;
