--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- New CSS link -->
+    <!--
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    -->
+
     <title>Простой сайт</title>
 </head>
 <body>
 <nav class="navbar navbar-light bg-light container">
     <a class="navbar-brand logo-top" href="#">
-        <img src="{% static 'img/Logo.png' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
+        <img src="{% static 'img/Logo.png' %}" width="40" height="40" class="d-inline-block align-top" alt=""
+             loading="lazy">
         Brand Name
     </a>
     <div class="contact-top">
@@ -29,17 +36,18 @@
 
 {% block index %}
 
-{% endblock  %}
+{% endblock %}
 
 {% block thanks %}
 
-{% endblock  %}
+{% endblock %}
 
 <footer>
     <div class="container">
         <nav class="navbar navbar-light bg-light container">
             <a class="navbar-brand logo-top" href="#">
-                <img src="{% static 'img/Logo.png' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
+                <img src="{% static 'img/Logo.png' %}" width="40" height="40" class="d-inline-block align-top" alt=""
+                     loading="lazy">
                 Brand Name
             </a>
             <div class="contact-top">
