--- a/templates/carusel.html
+++ b/templates/carusel.html
@@ -6,8 +6,8 @@
                 <div class="carousel-item {{ slide.cms_css }}">
                     <img src="{{ slide.cms_img.url }}" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5 class="slaider_h">{{ slide.cms_title }}</h5>
-                        <p class="slaider_p">{{ slide.cms_text }}</p>
+                        <h5 class="slider_h">{{ slide.cms_title }}</h5>
+                        <p class="slider_p">{{ slide.cms_text }}</p>
                     </div>
                 </div>
             {% endfor %}
