--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
                 <form action="{% url 'thanks' %}" method="POST" style="width: 50%;">
                     {% csrf_token %}
                     <div class="form-group row">
-                        <label for="inputEmail3" class="col-sm-2 col-form-label">Имя</label><br>
-                        <input type="text" class="form-control" name="name">
+                        <label for="inputEmail3" class="col-sm-1 col-form-label">Имя</label><br>
+                        {{ form.name }}
                         <div class="">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputEmail3" class="col-sm-2 col-form-label">Телефон</label><br>
-                        <input type="text" class="form-control" name="phone">
+                        <label for="inputEmail3" class="col-sm-1 col-form-label">Телефон</label><br>
+                        {{ form.phone }}
                         <div class="">
                         </div>
                     </div>
