--- a/templates/prices.html
+++ b/templates/prices.html
@@ -8,7 +8,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the
                         card's content.</p>
-                    <h3>10 000 UAH</h3>
+                    <h3>{{ pc_1 }} грн.</h3>
                 </div>
             </div>
             <div class="card product_card" style="width: 18rem; background-color: #c0c0c0;">
@@ -17,7 +17,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the
                         card's content.</p>
-                    <h3>20 000 UAH</h3>
+                    <h3>{{ pc_2 }} грн.</h3>
                 </div>
             </div>
             <div class="card product_card" style="width: 18rem; background-color: #ffd700;">
@@ -26,7 +26,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the
                         card's content.</p>
-                    <h3>30 000 UAH</h3>
+                    <h3>{{ pc_3 }} грн.</h3>
                 </div>
             </div>
         </div>
@@ -45,27 +45,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>Услуга 1 Услуга 1 Услуга 1</td>
-                <td>
-                    <del>2000</del>
-                </td>
-                <td>1000</td>
-            </tr>
-            <tr>
-                <td>Услуга 2 Услуга 2 Услуга 2</td>
-                <td>
-                    <del>2000</del>
-                </td>
-                <td>1000</td>
-            </tr>
-            <tr>
-                <td>Услуга 3 Услуга 3 Услуга 3</td>
-                <td>
-                    <del>2000</del>
-                </td>
-                <td>1000</td>
-            </tr>
+            {% for row in price_table %}
+                <tr>
+                    <td>{{ row.pt_title }}</td>
+                    <td>
+                        <del>{{ row.pt_old_price }}</del>
+                    </td>
+                    <td>{{ row.pt_new_price }}</td>
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
