--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -3,9 +3,15 @@
 
 {% block thanks %}<!-- Спасибо -->
     <section>
-        <div class="container">
-            <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>Спасибо за заявку!</h1></div>
-        </div>
+        {% if name %}
+            <div class="container">
+                <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>{{ name }}, cпасибо за заявку!</h1></div>
+            </div>
+        {% else %}
+            <div class="container">
+                <div style='margin-top: 35%; margin-bottom: 35%; text-align: center;'><h1>Спасибо страница!</h1></div>
+            </div>
+        {% endif %}
     </section>
     <!-- Спасибо -->
 {% endblock %}
